# ElsockControllerCpp

./: AUTHORS  CMakeLists.txt  Doxyfile  README.md
include/api/: ElsockController.h  ElsockTypes.h
include/app/: MainWindow.h
src/api/: ElsockController.cpp
src/app/: Main.cpp  MainWindow.cpp
ui/: MainWindow.ui
